wip: pass --enable-native-access to kuilt-websocket test JVMs